# projeto-Poetry01

./: pyproject.toml
